--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <ul>
                 <li>
                     <h3>Увага до деталей</h3>
-                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції</p>
+                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
                 <li>
                     <h3>Пунктуальність</h3>
