--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
             <h2>Чим ми займаємося</h2>
             <ul>
                 <li>
-                    <img src="./Images/Coding.jpg" alt="Чоловік пише код, використовуючи планшет і портативну клавіатуру" width="370">
+                    <img src="./images/coding.jpg" alt="Чоловік пише код, використовуючи планшет і портативну клавіатуру" width="370">
                 </li>
                 <li>
-                    <img src="./Images/Monitor.jpg" alt="Людина створює дизайн веб-сайту для смартфона на ноутбуці" width="370">
+                    <img src="./images/monitor.jpg" alt="Людина створює дизайн веб-сайту для смартфона на ноутбуці" width="370">
                 </li>
                 <li>
-                    <img src="./Images/rainbow.jpg" alt="Людина використовує планшет та стилус, щоб вибрати колір з палітри" width="370">
+                    <img src="./images/rainbow.jpg" alt="Людина використовує планшет та стилус, щоб вибрати колір з палітри" width="370">
                 </li>
             </ul>
         </section>
@@ -69,23 +69,23 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./Images/Демʼяненко.jpg" alt="Усміхнений чоловік в окулярах" width="270">
+                    <img src="./images/1.jpg" alt="Усміхнений чоловік в окулярах" width="270">
                     <h3>Ігор Дем'яненко</h3>
                     <p lang="en">Product Designer</p>
                 </li>
                 <li>
-                    <img src="./Images/Рєпіна.jpg" alt="Усміхнена жінка в окулярах" width="270">
+                    <img src="./images/2.jpg" alt="Усміхнена жінка в окулярах" width="270">
                     <h3>Ольга Рєпіна</h3>
                     <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./Images/Тарасов.jpg" alt="Усміхнений чоловік дивиться праворуч"
+                    <img src="./images/3.jpg" alt="Усміхнений чоловік дивиться праворуч"
                         width="270">
                     <h3>Микола Тарасов</h3>
                     <p lang="en">Marketing</p>
                 </li>
                 <li>
-                    <img src="./Images/Єрмаков.jpg" alt="Чоловік в окулярах з легкою посмішкою на обличчі" width="270">
+                    <img src="./images/4.jpg" alt="Чоловік в окулярах з легкою посмішкою на обличчі" width="270">
                     <h3>Михайло Єрмаков</h3>
                     <p lang="en">UI Designer</p>
                 </li>
